# world-cup-climate

./: .env.example  .gitignore  AGENTS.md  README.md  prek.toml  pyproject.toml
.claude/: settings.json
.claude/skills/era5/: SKILL.md
.claude/skills/era5/references/: variables.md
.claude/skills/sports-weather-app/: SKILL.md  scaffold.py
.claude/skills/sports-weather-app/references/: architecture.md  data-model.md  deploy.md  weather-data.md
.github/workflows/: pages.yml
backend/: recompute.py  test_recompute.py
data/: fixtures.json  locations.json
docs/: ARCHITECTURE.md  DATA_MODEL.md  FIXTURES.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/cycles/: latest.json
frontend/public/data/days/: 2026-06-11.json  2026-06-12.json  2026-06-13.json  2026-06-14.json  2026-06-15.json  2026-06-16.json  2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json
frontend/public/data/matches/: 2026-06-11_mexico-vs-south-africa.json  2026-06-11_south-korea-vs-czechia.json  2026-06-12_canada-vs-bosnia-and-herzegovina.json  2026-06-12_usa-vs-paraguay.json  2026-06-13_australia-vs-turkiye.json  2026-06-13_brazil-vs-morocco.json  2026-06-13_haiti-vs-scotland.json  2026-06-13_qatar-vs-switzerland.json  2026-06-14_germany-vs-curacao.json  2026-06-14_ivory-coast-vs-ecuador.json  2026-06-14_netherlands-vs-japan.json  2026-06-14_sweden-vs-tunisia.json  2026-06-15_belgium-vs-egypt.json  2026-06-15_iran-vs-new-zealand.json  2026-06-15_saudi-arabia-vs-uruguay.json  2026-06-15_spain-vs-cape-verde.json  2026-06-16_argentina-vs-algeria.json  2026-06-16_austria-vs-jordan.json  2026-06-16_france-vs-senegal.json  2026-06-16_iraq-vs-norway.json  2026-06-17_england-vs-croatia.json  2026-06-17_ghana-vs-panama.json  (+50 more)
frontend/src/: App.tsx  Chart.tsx  LangContext.tsx  MapView.tsx  MatchCard.tsx  colors.ts  data.ts  flags.ts  i18n.ts  index.css  main.tsx  nextMatch.test.ts  nextMatch.ts  types.ts
notebooks/: app_demo.ipynb  data_demo.ipynb  demo.ipynb
scripts/: gitleaks_notebooks.py  roof_closed_matches.py
src/world_cup_climate/: __init__.py  app.py  arraylake_io.py  client.py  climate.py  config.py  edr.py  era5.py  fixtures.py  forecast.py  ifs.py  locations.py  providers.py  sports.py  viz.py  viz_ifs.py
src/world_cup_climate/static/: app.js  index.html  style.css
tests/: test_pipeline.py
(+49 files in other folders)
