[project]
name = "world-cup-climate"
version = "0.1.0"
description = "Climate around World Cup matches: venue vs team capitals vs 10-year normal (ERA5 + ECMWF IFS via Arraylake)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arraylake>=1.1.0",
    "dask>=2026.6.0",
    "icechunk>=2.0.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pcodec>=1.0.2",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tqdm>=4.68.2",
    "xarray>=2026.4.0",
    "xclim>=0.50.0",
    "zarr>=3.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_cup_climate"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
]
